2007-02-06  Guillem Jover  <guillem@hadrons.org>

	* Makefile (CFLAGS): Use '-march' instead of the deprecated '-mcpu'.

2007-02-06  Guillem Jover  <guillem@hadrons.org>

	* kinfo.c: Removed.
	* kver.c: New file.
	* Makefile: Include kver.mak.
	(KVERS): Move this variable to 'kver.mak', which is a generated file.
	(VERSION_HEADER): New variable to cope with UTS_RELEASE being moved
	from 'linux/version.h' to 'linux/utsrelease.h' in 2.6.18.
	(kver, kver.mak): New targets.
	(KBUILD): New variable.
	(KVER_MAJOR, KVER_MINOR, BUILD_TYPE, MODULE_TDFX): Likewise, moved
	from the generated file 'config'.
	(config, kinfo, kinfo.h): Remove targets.
	(modules, intstall, clean): Do not depend on config target.
	(modules, intstall): Depend on sanity target .

2007-02-06  Guillem Jover  <guillem@hadrons.org>

	* Makefile (.PHONY): Add clean_kbuild. Rename modules-legacy,
	modules-kbuild, install-legacy, install-kbuild and clean-legacy to
	modules_legacy, modules_kbuild, install_legacy, install_kbuild
	and clean_legacy.

2007-01-31  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_device.c (cardInfo_t): Make dev be 'struct pci_dev *' even for
	kernels < 2.6.0.
	(findCardType): Assign to cards[n].dev the dev variable instead of
	devfn. Fix macro to use devfn instead.

2006-12-03  Guillem Jover  <guillem@hadrons.org>

	* 3dfx_device.c (my_remap_page_range): Define as remap_pfn_range for
	linux 2.6.10 or higher.

2006-12-03  Guillem Jover  <guillem@hadrons.org>

	Use the "new" kernel level exception handling for memory accesses
	introduced in linux 2.1.8, which obsoletes verify_aread.

	* 3dfx_device.c (doQueryFetch): Remove verify_area and check for
	copy_to_user return values.
	(doPIORead): Likewise.
	(doQueryUpdate): Remove verify_area and check for copy_from_user
	return values.
	(doQuery): Likewise.
	(doPIOWrite): Likewise.
	(doPIO): Likewise.
	(verify_area) [DEBUG]: Remove function.
	(a_last_dummy_function) [DEBUG]: Likewise.

2006-12-03  Guillem Jover  <guillem@hadrons.org>
